# explore-llms

./: Cargo.toml  README.md
prompts/: adopting_personas.json  detailed_queries.json  provide_examples.json  specify_output_length.json  specifying_steps.json  using_delimiters.json
src/: main.rs  prompt_utils.rs  utils.rs
src/agents/: mod.rs  ollama_agent.rs
src/axriv/: mod.rs
src/extractors/: mod.rs
