[package]
name = "rust_gpt"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.28.1"
reqwest = { version = "0.12.15", features = ["json"] }
rig-core = "0.12.0"
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
quick-xml = { version = "0.31", features = ["serialize"] }
anyhow = "1.0.98"
regex = "1.11.1"
